fixed some broken styles on the comments area

--- a/src/components/CommentsInput/CommentsInput.scss
+++ b/src/components/CommentsInput/CommentsInput.scss
@@ -22,23 +22,39 @@ body {
             margin-left: 9rem;
         }
     }
+    &__container{
+
+        margin-left: auto;
+        margin-right: auto;
+
+        @include tablet {
+            flex-direction: row;
+        }
+
+        @include desktop {
+            display: flex;
+            flex-direction: column;
+        }
+    }
 
     &__wrapper {
-        display: flex;  
+        display: flex; 
+        justify-content: flex-start; 
         padding-bottom: 1.5rem;  
-        width: 90%;
+        width: 18rem;
         border-bottom: solid 2px $grey-light;    
-        margin-left: auto;
+        margin-left: 1rem;
         margin-right: auto;
         
         @include tablet {
-            justify-content: space-between;
+            margin-left: 2.2rem;
             width: 90%;
         }
 
         @include desktop {
             width: 85%;
             margin-left: 8.5rem;
+            
         }
     }
 
@@ -56,6 +72,8 @@ body {
 
         @include tablet {
             margin-top: 0;
+            margin-right: 0;
+            
             
         }
 
@@ -71,28 +89,34 @@ body {
         margin-right: auto;
 
         @include tablet {
-            width: 100%;
+            width: 110%;
+            position: relative;
+            bottom: .2rem;
+            
         }
     }
 
        
     &__label-join {
-        margin-left: 1.60rem;
+        margin-left: 5rem;
+        margin-right: auto;
         margin-bottom: 0;
         font-size: .9rem;
         color: $grey-normal;
         font-weight: bold;
         position: relative;
-        margin-left: auto;
-        margin-right: auto;
+        text-align: left;
+        
+        
 
         @include tablet {
             position: relative;
-            right: 13rem;
+            left: 2.2rem;
         }
 
         @include desktop {
-            right: 10.75rem;
+            text-align: left;
+            left: 8.6rem;
         }
     }
 
@@ -128,7 +152,8 @@ body {
 
         @include tablet {
             padding: .95rem 2.7rem;
-            
+            position: relative;
+            bottom: .15rem;
             
         }
 
